src/routes/snapshots/wallet_live__routes__api__tests__list_assets.snap
---
source: src/routes/api.rs
expression: assets
---
[
  {
    "id": 1,
    "name": "Bitcoin",
    "unit_value": 10.0,
    "quantity": 4.0
  }
]
