src/routes/snapshots/wallet_live__routes__api__tests__update_asset.snap
---
source: src/routes/api.rs
expression: updated_asset
---
{
  "id": 1,
  "name": "Ethereum",
  "unit_value": 20.0,
  "quantity": 3.0
}
